--- a/index.html
+++ b/index.html
@@ -150,16 +150,16 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="./Carsoul_Images/slide_5.jpg" class="d-block w-100 slide-images" alt="..." >
+                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_1.jpg" class="d-block w-100 slide-images" alt="..." >
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="./Carsoul_Images/slide_1.jpg" class="d-block w-100 slide-images" alt="...">
+                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_1.jpg" class="d-block w-100 slide-images" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src="./Carsoul_Images/slide_3.jpg" class="d-block w-100 slide-images " alt="...">
+                    <img src=" B:\Company_Work\NGOWebsites\Carsoul_Images\slide_3.jpg" class="d-block w-100 slide-images " alt="...">
                   </div>
                   <!-- <div class="carousel-item">
-                    <img src="./Carsoul_Images/slide_7.jpg" class="d-block w-100 slide-images " alt="...">
+                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_3.jpg" class="d-block w-100 slide-images " alt="...">
                   </div> -->
                 
                 </div>
