update images for background

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active" data-bs-interval="10000">
-                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_1.jpg" class="d-block w-100 slide-images" alt="..." >
+                    <img src="https://i.pinimg.com/736x/9c/4e/f2/9c4ef2c519542d7487ae9acc0afcb5c5.jpg" class="d-block w-100 slide-images" alt="..." >
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
                     <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_1.jpg" class="d-block w-100 slide-images" alt="...">
