Update in there carsoul imges

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                     <img src="https://i.pinimg.com/736x/9c/4e/f2/9c4ef2c519542d7487ae9acc0afcb5c5.jpg" class="d-block w-100 slide-images" alt="..." >
                   </div>
                   <div class="carousel-item" data-bs-interval="2000">
-                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_1.jpg" class="d-block w-100 slide-images" alt="...">
+                    <img src="https://i.pinimg.com/736x/4f/7c/19/4f7c19a91f932bf522a56b9fd0e8128f.jpg" class="d-block w-100 slide-images" alt="...">
                   </div>
                   <div class="carousel-item">
                     <img src=" B:\Company_Work\NGOWebsites\Carsoul_Images\slide_3.jpg" class="d-block w-100 slide-images " alt="...">
