This is my last update

--- a/index.html
+++ b/index.html
@@ -156,10 +156,10 @@
                     <img src="https://i.pinimg.com/736x/4f/7c/19/4f7c19a91f932bf522a56b9fd0e8128f.jpg" class="d-block w-100 slide-images" alt="...">
                   </div>
                   <div class="carousel-item">
-                    <img src=" B:\Company_Work\NGOWebsites\Carsoul_Images\slide_3.jpg" class="d-block w-100 slide-images " alt="...">
+                    <img src=" https://i.pinimg.com/736x/51/82/2c/51822c3778e43b41d03a439139b697e6.jpg" class="d-block w-100 slide-images " alt="...">
                   </div>
                   <!-- <div class="carousel-item">
-                    <img src="B:\Company_Work\NGOWebsites\Carsoul_Images\slide_3.jpg" class="d-block w-100 slide-images " alt="...">
+                    <img src="https://i.pinimg.com/736x/dc/b8/b9/dcb8b951999eca96f1dc3b69a07a6918.jpg" class="d-block w-100 slide-images " alt="...">
                   </div> -->
                 
                 </div>
